# OpenAI_Agnets

./: .env  ReadME.md  hello.py  pyproject.toml
00_Chanilit/src/chainlit1/: __init__.py
02_Python_syntax/: python_syntax_dataclasses.ipynb
uv/Project1/explore-uv/: pyproject.toml
uv/Project2/uv-2/: pyproject.toml
uv/Project2/uv-2/src/uv_2/: __init__.py
