[project]
name = "uv-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dr-Abeera-Ramla-Javaid", email = "Dr.arjavaid701.pk@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
uv-2 = "uv_2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
